Adds error message when city not found

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <input type="text" id="searchInput" placeholder="Search Location...">
         <img src="images/icons/search-icon.png" id="searchButton" alt="Search-icon">
       </div>
+      <div id="error"></div>
       <div id="place" class="space-between"></div>
       <div id="day" class="space-between"></div>
       <div id="time"></div>
